--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -3,20 +3,29 @@
 #                                                         :::      ::::::::    #
 #    Makefile                                           :+:      :+:    :+:    #
 #                                                     +:+ +:+         +:+      #
-#    By: nduvoid <nduvoid@student.42.fr>            +#+  +:+       +#+         #
+#    By: nduvoid <nduvoid@42mulhouse.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/17 08:13:34 by nduvoid           #+#    #+#              #
-#    Updated: 2024/10/23 15:14:52 by nduvoid          ###   ########.fr        #
+#    Updated: 2024/10/25 16:58:34 by nduvoid          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-NAME = ft_printf.a
+NAME = libftprintf.a
 
-SRCS = 
+SRCSDIR = srcs
+INCDIR = includes 
+OBJDIR = objs
+
+SRCS =	$(SRCSDIR)/put_func.c \
+		$(SRCSDIR)/put_func2.c \
+		$(SRCSDIR)/put_func3.c \
+		$(SRCSDIR)/ft_printf.c
+
+INCLUDES = libft.a
 
 OBJS = $(SRCS:.c=.o)
 
-SRCS_BONUS = ft_printf.c
+SRCS_BONUS =
 
 OBJS_BONUS = $(SRCS_BONUS:.c=.o)
 
@@ -46,4 +55,3 @@ fclean: clean
 re: fclean all
 
 .PHONY: all clean fclean re bonus
-
