--- a/ft_printf/Makefile
+++ b/ft_printf/Makefile
@@ -5,53 +5,48 @@
 #                                                     +:+ +:+         +:+      #
 #    By: nduvoid <nduvoid@42mulhouse.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
-#    Created: 2024/10/17 08:13:34 by nduvoid           #+#    #+#              #
-#    Updated: 2024/10/25 16:58:34 by nduvoid          ###   ########.fr        #
+#    Created: 2024/10/28 09:06:20 by nduvoid           #+#    #+#              #
+#    Updated: 2024/10/30 14:29:39 by nduvoid          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 NAME = libftprintf.a
 
-SRCSDIR = srcs
-INCDIR = includes 
-OBJDIR = objs
+SRCDIR = srcs
+INCDIR = libft
+OBJDIR = ./.obj
 
-SRCS =	$(SRCSDIR)/put_func.c \
-		$(SRCSDIR)/put_func2.c \
-		$(SRCSDIR)/put_func3.c \
-		$(SRCSDIR)/ft_printf.c
-
-INCLUDES = libft.a
-
-OBJS = $(SRCS:.c=.o)
-
-SRCS_BONUS =
-
-OBJS_BONUS = $(SRCS_BONUS:.c=.o)
+SRCS =		ft_printf.c \
+			put_func.c \
+			put_func2.c \
+			put_func3.c \
+			utils.c
+SRC = 		$(addprefix $(SRCDIR)/, $(SRCS))
+SRCOBJ = 	$(patsubst $(SRCDIR)/%.c, $(OBJDIR)/%.o, $(SRC))
 
 AR = ar
 FLAGS = rcs
 RM = rm -f
-CC = gcc
+CC = cc
 CFLAGS = -Wall -Wextra -Werror
 
 all: $(NAME)
 
-$(NAME): $(OBJS) $(BONUS_OBJS)
-	$(AR) $(FLAGS) $(NAME) $(OBJS) $(BONUS_OBJS)
+$(NAME): $(OBJDIR) $(SRCOBJ)
+	$(AR) $(FLAGS) $(NAME) $(SRCOBJ)
 
-bonus: $(OBJS) $(OBJS_BONUS)
-	$(AR) $(FLAGS) $(NAME) $(OBJS) $(OBJS_BONUS)
-
-%.o: %.c
+$(OBJDIR)/%.o: $(SRCDIR)/%.c | $(OBJDIR)
 	$(CC) $(CFLAGS) -c $< -o $@
 
+$(OBJDIR):
+	mkdir -p $(OBJDIR)
+
 clean:
-	$(RM) $(OBJS) $(OBJS_BONUS)
+	rm -rf $(OBJDIR)
 
 fclean: clean
 	$(RM) $(NAME)
 
 re: fclean all
 
-.PHONY: all clean fclean re bonus
+.PHONY: all clean fclean re
