--- a/circle-2/push_swap/libft/ft_printf/Makefile
+++ b/circle-2/push_swap/libft/ft_printf/Makefile
@@ -6,7 +6,7 @@
 #    By: nduvoid <nduvoid@42mulhouse.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/10/28 09:06:20 by nduvoid           #+#    #+#              #
-#    Updated: 2024/11/21 13:35:41 by nduvoid          ###   ########.fr        #
+#    Updated: 2024/12/11 13:12:37 by nduvoid          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -34,24 +34,24 @@ CFLAGS =	-Wall -Wextra -Werror
 all: $(LIBFT) $(NAME)
 
 $(LIBFT):
-	$(MAKE) -C $(LIBFTDIR)
+	@$(MAKE) -C $(LIBFTDIR)
 
 $(NAME): $(LIBFT) $(SRCOBJ)
-	$(AR) $(FLAGS) $(NAME) $(SRCOBJ)
+	@$(AR) $(FLAGS) $(NAME) $(SRCOBJ)
 
 $(OBJDIR)/%.o: $(SRCDIR)/%.c | $(OBJDIR)
-	$(CC) $(CFLAGS) -c $< -o $@
+	@$(CC) $(CFLAGS) -c $< -o $@
 
 $(OBJDIR):
-	mkdir -p $(OBJDIR)
+	@mkdir -p $(OBJDIR)
 
 clean:
-	rm -rf $(OBJDIR)
-	$(MAKE) -C $(LIBFTDIR) clean
+	@rm -rf $(OBJDIR)
+	@$(MAKE) -C $(LIBFTDIR) clean
 
 fclean: clean
-	$(RM) $(NAME)
-	$(MAKE) -C $(LIBFTDIR) fclean
+	@$(RM) $(NAME)
+	@$(MAKE) -C $(LIBFTDIR) fclean
 
 re: fclean all
 
